[metadata]
name = crestic
version = 0.7.0
author = Nils Werner
author_email = nils.werner@gmail.com
description = Configurable restic
license_files =
    LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/nils-werner/crestic/
project_urls =
    Circle CI = https://app.circleci.com/pipelines/github/nils-werner/crestic
    Crestic source = https://github.com/nils-werner/crestic/
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: System :: Archiving :: Backup

[options]
py_modules =
    crestic
python_requires = >=3.6

[options.entry_points]
console_scripts =
    crestic = crestic:cli

[options.extras_require]
appdirs = appdirs
tests =
    appdirs
    pytest
    pytest-cov
    pytest-mock
    pytest-pycodestyle

[tool:pytest]
addopts = --doctest-modules --cov-report term-missing --cov crestic --pycodestyle -Werror

[pycodestyle]
max-line-length = 127
